# Museboard

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: check.yml
docs/: _config.yml  ai-provider-setup.md  comfyui-setup.md  github-publishing.md  index.md  manual-test-plan.md  release-checklist.md
src/: App.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: ai.rs  comfy.rs  lib.rs  main.rs  models.rs  project.rs  util.rs  window.rs
src/components/: Canvas.tsx  ComfyImagePanel.tsx  ComfySetupWizard.tsx  GeneratePanel.tsx  NodeTree.tsx  Toolbar.tsx
src/components/canvas/: AnnotationView.tsx  AssetView.tsx
src/lib/: ai.ts  aiProviders.ts  canvas.ts  comfy.ts  http.ts  i18n.ts  id.ts  storage.ts  templates.ts  tree.ts
src/test/: canvas.test.ts  comfy.test.ts  storage.test.ts  tree.test.ts
